microservices-sample/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
  namespace: sample-app
spec:
  selector:
    app: sample-api
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: sample-ui
  namespace: sample-app
spec:
  selector:
    app: sample-ui
  ports:
    - port: 80
      targetPort: 80
